--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,12 +6,78 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline\n",
+    "\n",
     "import matplotlib_inline\n",
-    "matplotlib_inline.backend_inline.set_matplotlib_formats('svg')\n",
+    "matplotlib_inline.backend_inline.set_matplotlib_formats(\"svg\")\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
+    "import scipy\n",
     "import uproot\n",
-    "import scipy"
+    "from tqdm import tqdm  # progress bar"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def drift_times_analysis(times: np.ndarray, bins: int = 50):\n",
+    "    def reject_outliers(data, m=10.0):\n",
+    "        d = np.abs(data - np.median(data))\n",
+    "        mdev = np.median(d)\n",
+    "        s = d / mdev if mdev else 0.0\n",
+    "        return data[s < m]\n",
+    "\n",
+    "    def histogram_with_centers(_x: np.ndarray, **kwargs):\n",
+    "        counts, edges = np.histogram(_x, **kwargs)\n",
+    "        centers = 0.5 * (edges[:-1] + edges[1:])\n",
+    "        return centers, counts\n",
+    "\n",
+    "    times = reject_outliers(times)\n",
+    "\n",
+    "    x, y = histogram_with_centers(times, bins=bins)\n",
+    "\n",
+    "    def fit_function(x, amplitude, center, sigma):\n",
+    "        return amplitude * np.exp(-((x - center) ** 2) / (2 * sigma**2))\n",
+    "\n",
+    "    initial_guess = [np.max(y), np.median(times), np.std(times)]\n",
+    "    p, _ = scipy.optimize.curve_fit(fit_function, x, y, p0=initial_guess)\n",
+    "\n",
+    "    mean, sigma = p[1], p[2]\n",
+    "    return mean, sigma"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "files_dir = Path(\"/root/drift-velocity/data/Argon-10p0_Isobutane-22Nov2022/\")\n",
+    "files = [str(files_dir / file) for file in os.listdir(files_dir)]\n",
+    "\n",
+    "drift_times = dict()\n",
+    "drift_times_sigma = dict()\n",
+    "\n",
+    "for file in tqdm(files):\n",
+    "    data = dict()\n",
+    "    with uproot.open(file) as f:\n",
+    "        tree = f[\"t\"]\n",
+    "        times = tree[\"RT30\"].array()\n",
+    "        drift_voltage = list(set(tree[\"drift_voltage\"].array()))[0]\n",
+    "\n",
+    "        mean, sigma = drift_times_analysis(times)\n",
+    "        drift_times[drift_voltage] = mean\n",
+    "        drift_times_sigma[drift_voltage] = sigma"
    ],
    "metadata": {
     "collapsed": false
@@ -38,43 +104,31 @@
     }
    ],
    "source": [
-    "file = \"run_020/gap_10.0_mesh_340.0_drift_50.0.root\"\n",
-    "print(f\"processing file: {file}\")\n",
-    "data = dict()\n",
-    "with uproot.open(file) as f:\n",
-    "    tree = f[\"t\"]\n",
-    "    for key in tree.keys():\n",
-    "        data[key] = tree[key].array()\n",
+    "for i in range(10):\n",
     "\n",
-    "for i in range(1):\n",
     "    x = data[\"time\"][i]\n",
-    "    y_original = data[\"CH3\"][i]\n",
-    "    N = 50\n",
-    "    y = scipy.ndimage.uniform_filter1d(y_original, size=N)\n",
+    "    y = data[\"CH3\"][i]\n",
     "\n",
-    "    plt.plot(y_original, color=\"blue\", alpha=0.5)\n",
-    "    plt.plot(y, color=\"orange\")\n",
+    "    base = data[\"peak_base\"][i]\n",
+    "    height = data[\"peak_height\"][i]\n",
+    "    peak_x = data[\"peak_position\"][i]\n",
     "\n",
-    "    peaks, _ = scipy.signal.find_peaks(y, distance=500)\n",
-    "    prominences = scipy.signal.peak_prominences(y, peaks)[0]\n",
+    "    plt.plot(x, y)\n",
     "\n",
-    "    argmax = np.argmax(prominences)\n",
-    "    peak = peaks[argmax]\n",
-    "    prominence = prominences[argmax]\n",
-    "    peak_base = y[peak] - prominence\n",
+    "    plt.vlines(x=peak_x, ymin=base, ymax=base + height, color=\"orange\")\n",
+    "    plt.hlines(y=base, xmin=np.min(x), xmax=np.max(x), color=\"orange\")\n",
     "\n",
-    "    plt.plot([peak], y[peak], \"ro\")\n",
+    "    plt.plot([peak_x], [base + height], \"ro\")\n",
     "\n",
-    "    plt.vlines(x=peak, ymin=peak_base, ymax=y[peak])\n",
+    "    plt.hlines(y=base + 0.5 * height, xmin=np.min(x), xmax=np.max(x), color=\"orange\")\n",
+    "    plt.plot([data[\"RT50\"][i]], [base + 0.5 * height], \"ro\")\n",
     "\n",
-    "    plt.hlines(y=peak_base, xmin=0, xmax=len(y))\n",
-    "    plt.hlines(y=peak_base + prominence * 0.20, xmin=0, xmax=len(y))\n",
+    "    plt.hlines(y=base + 0.25 * height, xmin=np.min(x), xmax=np.max(x), color=\"orange\")\n",
+    "    plt.plot([data[\"RT25\"][i]], [base + 0.25 * height], \"ro\")\n",
     "\n",
-    "    h_line = np.ones(len(y)) * (peak_base + prominence * 0.20)\n",
-    "    idx = sorted(np.argwhere(np.diff(np.sign(y - h_line))).flatten())[0]\n",
-    "    plt.plot(idx, h_line[idx], 'ro')\n",
-    "    plt.plot(h_line)\n",
-    "    plt.savefig(\"fit.svg\")\n",
+    "    plt.hlines(y=base + 0.75 * height, xmin=np.min(x), xmax=np.max(x), color=\"orange\")\n",
+    "    plt.plot([data[\"RT75\"][i]], [base + 0.75 * height], \"ro\")\n",
+    "\n",
     "    plt.show()"
    ],
    "metadata": {
